# bingbing-aidlc

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
.kiro/steering/: coding-standards.md
aidlc-docs/: aidlc-state.md  audit.md  traceability-matrix.md
aidlc-docs/construction/plans/: all-units-functional-design-plan.md  code-generation-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md  unit-of-work-dependency.md  unit-of-work-story-map.md  unit-of-work.md
aidlc-docs/inception/decisions/: ADR-001-role-based-persona-model.md  ADR-002-strands-as-orchestrator.md  ADR-003-two-tier-memory.md  ADR-004-trip-scoped-state-machine.md  ADR-005-natural-speaker-recognition.md  README.md
aidlc-docs/inception/evaluation/: golden-dataset.jsonl  metrics.md
aidlc-docs/inception/plans/: application-design-plan.md  execution-plan.md  story-generation-plan.md  unit-of-work-plan.md  user-stories-assessment.md
aidlc-docs/inception/requirements/: requirement-clarification-questions.md  requirement-verification-questions.md  requirements.md
aidlc-docs/inception/review/: application-design-review.md
aidlc-docs/inception/user-stories/: personas.md  stories.md
docs/: concept-diagram.html
frontend/: index.html  login.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatInput.tsx  ConversationStream.tsx  DriverAuth.tsx  EvaluationPanel.tsx  Header.tsx  MemoryPanel.tsx  PermissionDashboard.tsx  SeatMap.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/stores/: conversationStore.ts  profileStore.ts  tripStore.ts
frontend/src/tests/: schemas.test.ts
frontend/src/types/: index.ts  schemas.ts  speech.d.ts
requirements/: family-profile-co-pilot-idea.md
services/agent-service/: Dockerfile  pyproject.toml
services/api-service/: Dockerfile  pyproject.toml
services/api-service/src/: __init__.py  config.py  main.py
services/api-service/src/mapping/: __init__.py  speaker_mapper.py  state_machine.py
services/api-service/src/voice/: __init__.py  transcribe.py
services/api-service/tests/: __init__.py  test_speaker_mapper.py  test_state_machine.py
services/reflection-lambda/: pyproject.toml
services/reflection-lambda/src/: __init__.py  handler.py
shared/: __init__.py  pyproject.toml
shared/models/: __init__.py  entities.py  enums.py
shared/policies/: permissions.cedar
shared/prompts/: child.yaml  driver_adult.yaml  elder.yaml  guest.yaml  passenger_adult.yaml
terraform/: main.tf  outputs.tf  tfplan  variables.tf  versions.tf
(+43 files in other folders)
