[project]
name = "family-car-agent-reflection-lambda"
version = "0.1.0"
description = "Reflection Lambda - Trip-end pattern extraction"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "redis>=5.0.0",
    "structlog>=24.0.0",
    "pydantic>=2.0.0",
    "family-car-agent-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
family-car-agent-shared = { workspace = true }
